# box3d_touchdesigner

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTANCES_POP_PLAN.md  LICENSE  PLAN.md  README.md  build_and_install.bat  install_plugin.bat  install_plugin.sh  test.48.toe
.github/workflows/: release.yml
Backup/: test.47.toe
Box3DBodiesCHOP/: Box3DBodiesCHOP.cpp  Box3DBodiesCHOP.h
Box3DBodySOP/: Box3DBodySOP.cpp  Box3DBodySOP.h
Box3DContactsCHOP/: Box3DContactsCHOP.cpp  Box3DContactsCHOP.h
Box3DDebugSOP/: Box3DDebugSOP.cpp  Box3DDebugSOP.h
Box3DForceCHOP/: Box3DForceCHOP.cpp  Box3DForceCHOP.h
Box3DInstancesPOP/: Box3DInstancesPOP.cpp  Box3DInstancesPOP.h
Box3DJointCHOP/: Box3DJointCHOP.cpp  Box3DJointCHOP.h
Box3DSetJointSOP/: Box3DSetJointSOP.cpp  Box3DSetJointSOP.h
Box3DSolverCHOP/: Box3DSolverCHOP.cpp  Box3DSolverCHOP.h
TD-Examples/: Custom_Mesh_Collider.toe  Custom_Size_Instances.toe  Instances.toe  Instances_and_Dynamic.1.toe  Instances_and_Dynamic.toe  Joint.toe  Restitution.toe  Sample.toe
common/: Box3DTDCore.cpp  Box3DTDCore.h  TDB3Common.h  TDB3Mesh.h
samples/: Sample.19.toe  Sample.toe  test.46.toe  test.toe
samples/Backup/: Sample.1.toe  Sample.11.toe  Sample.12.toe  Sample.13.toe  Sample.14.toe  Sample.15.toe  Sample.16.toe  Sample.17.toe  Sample.18.toe  Sample.2.toe  Sample.3.toe  Sample.4.toe  Sample.5.toe  Sample.6.toe  test.45.toe
tools/td/: generate_tox_wrappers.py
